deploy/kustomize/components/observability/grafana/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  hostnames:
  - grafana.YOUR_DOMAIN
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: web-gateway
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - name: grafana
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
